--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>I'm mostly doing WebApp and websites. I also realized a couple of projects that involves databases, encryptions and even games ! <br> <br>Specialized in Javascript, I obviously master HTML and CSS/ SASS. Python is also a language I really appreciate, I'm using it for scripts and automation. One of my projects is a WebScrapping software for Twitter. For interactive websites, I'm using Python-Flask and my OOP skills </p>
             <p>I can create a full website, Login/Sign Up system and Data Storage solutions. I'm particulary good at creating beautiful and impacting style, making a website ergonomic and easy to use !  </p>
         </div><br>
-        <a id="cv" href="Portfolio/files/Sasha CV 2.docx"
+        <a id="cv" href="files/Sasha CV 2.docx"
             download="Sasha CV 2.docx"> 
             <i class="fas fa-arrow-alt-circle-down"></i> My CV
         </a>
