--- a/PortfolioPro/proj4.html
+++ b/PortfolioPro/proj4.html
@@ -134,10 +134,9 @@
     <footer>
         <a href="mailto:sashakharoubi@gmail.com" class="footer-link">Mail me by Clicking here !</a>
         <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-facebook"></i> Facebook</a></li>
-            <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
-            <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-github"></i> GitHub</a></li>
-            <li class="social-list__item"><a class="social-list__link" href="#"><i class="fab fa-linkedin-in"></i> LinkDin</a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://www.reddit.com/user/MikeyMike555/"><i class="fab fa-reddit"></i> Reddit</a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://github.com/Sosholoko"><i class="fab fa-github"></i> GitHub</a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/sasha-kharoubi-516073213/"><i class="fab fa-linkedin-in"></i> LinkDin</a></li>
         </ul>
     </footer>
 
