--- a/PortfolioPro/proj1.html
+++ b/PortfolioPro/proj1.html
@@ -118,13 +118,12 @@
 
         <div class="portfolio">
             <a href="#" class="portfolio__item">
-                <img src="../logos/matchuplogo2.png" alt="Match⚭Up®" class="portfolio__img">
                 <img src="../matchuppicture/homemu.png" alt="Match⚭Up®" class="portfolio__img">
                 <img src="../matchuppicture/signupmu.png" alt="Match⚭Up®" class="portfolio__img">
                 <img src="../matchuppicture/loginmu.png" alt="Match⚭Up®" class="portfolio__img">
-                <img src="../matchuppicture/dashmu.png" alt="Match⚭Up®" class="portfolio__img">
+                <img src="../matchuppicture/screen dash.png" alt="Match⚭Up®" class="portfolio__img">
                 <img src="../matchuppicture/messagemu.png" alt="Match⚭Up®" class="portfolio__img">
-                <img src="../matchuppicture/candimu.png" alt="Match⚭Up®" class="portfolio__img">
+                <img src="../matchuppicture/screen candi.png" alt="Match⚭Up®" class="portfolio__img">
                 <img src="../matchuppicture/matchmu.png" alt="Match⚭Up®" class="portfolio__img">
             </a>
         </div>
