--- a/PortfolioPro/proj2.html
+++ b/PortfolioPro/proj2.html
@@ -63,7 +63,7 @@
 
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
-            <strong>Hover® Messaging</strong>
+            <strong>Hover Messaging</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Hover Instant Messaging</p>
         <img src="../logos/hoverlogo.png" alt="Me" class="intro__img">
@@ -93,7 +93,7 @@
 
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">What is it ?</h2>
-        <p class="section__subtitle section__subtitle--about">Connect and make people closer !</p>
+        <p class="section__subtitle section__subtitle--about">Instant Messaging</p>
 
         <div class="about-me__body">
             <p>Hover Messaging is WebMessaging Website that allows users connected to a common server to discuss by instant messages. Creating a new account is totally free.</p>
