--- a/PortfolioPro/proj4.html
+++ b/PortfolioPro/proj4.html
@@ -55,6 +55,12 @@
             text-align: center;
             background-color: black;
         }
+        .social-list__link{
+            color: white;
+        }
+        .footer-link{
+            color: white;
+        }
     </style>
 </head>
 <body>
