--- a/PortfolioPro/proj3.html
+++ b/PortfolioPro/proj3.html
@@ -48,12 +48,16 @@
         .btn{
             color: black;
         }
+        #v{
+            position: relative;
+            top: 3px;
+        }
     </style>
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img id="imlogo" src="../Projects/logo2.png" alt="" height="50px" width="50px"></a><p> > de▽Snake</p>
+            <a href="../index.html"><img id="imlogo" src="../Projects/logo2.png" alt="" height="50px" width="50px"></a><p>  de<span id="v">▽</span>snake_</p>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
