--- a/PortfolioPro/proj2.html
+++ b/PortfolioPro/proj2.html
@@ -50,7 +50,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img id="imlogo" src="../Projects/logo2.png" alt="" height="50px" width="50px"></a><p>  de<span id="v">▽</span>snake_</p>
+            <a href="../index.html"><img id="imlogo" src="../Projects/logo2.png" alt="" height="50px" width="50px"></a><p> > de<span id="v">▽</span>snake_</p>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
