--- a/PortfolioPro/proj3.html
+++ b/PortfolioPro/proj3.html
@@ -68,10 +68,15 @@
       }
 
       .projects {
-        display: flex;
-        justify-content: center;
-        margin-left: 190px;
+        /* display: flex;
+        justify-content: center; */
+        margin-left: auto;
+        margin-right: auto;
       }
+
+      /* .section__title--intro strong {
+        margin-right: 50px !important;
+      } */
     </style>
   </head>
   <body>
@@ -163,7 +168,7 @@
           Probably the most advanced and sofisticated project I've done so far.
           Familygram was at first thought for my wife and her sisters, an
           Instagram Clone for them to exchange pictures just between them with
-          the impression of a legit social network !
+          the impression of a legit social network!
         </p>
         <p>
           It was my first real challenge dealing with React, a lots of new
