--- a/index.html
+++ b/index.html
@@ -203,11 +203,7 @@
         </p>
       </div>
       <br />
-      <a
-        id="cv"
-        href="/Portfolio/files/Sasha CV Finale.pdf"
-        download="Sasha CV Finale.pdf"
-      >
+      <a id="cv" href="files/Sasha CV Finale.pdf" download="">
         <i class="fas fa-arrow-alt-circle-down"></i> My CV
       </a>
 
