--- a/PortfolioPro/proj3.html
+++ b/PortfolioPro/proj3.html
@@ -175,7 +175,10 @@
           concepts needed to be understood for being able to make such project.
           For the DataStorage part I chose to go with Firebase. Real saver for
           anyone not really liking dealing with Db complexities. All basics
-          functions such as Like, Comment and Share are present !
+          functions such as Like, Comment and Share are present !<br />
+          <br />
+          This project is my interpretation of what a good looking website
+          should look.
         </p>
         <p>Techs Used : HTML / CSS / Javascript / React / Firebase</p>
       </div>
